<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".fragments.SavedNewsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_23dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/back_button_SF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:padding="@dimen/padding_10dp"
                android:contentDescription="@string/dummy_string"
                android:src="@drawable/baseline_arrow_back_black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved"
                android:textSize="@dimen/text_size_large"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_news_SF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:background="@drawable/costome_cardview"
            android:padding="@dimen/padding_5dp"
            android:queryBackground="@null"
            android:queryHint="@string/search_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_SF"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/costome_cardview"
            android:layout_height="match_parent"/>


    </LinearLayout>

</FrameLayout>